<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="party.danyang.doodles.ui.MainActivity">
    <item
        android:id="@+id/action_calender"
        android:icon="@drawable/ic_date_range_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_calender"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_timeline"
        android:icon="@drawable/ic_timeline_white_24dp"
        android:orderInCategory="90"
        android:title="@string/action_timeline"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="120"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item

        android:checkable="true"
        android:id="@+id/action_load_from_cache_first"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:title="@string/action_load_from_cache_first" />
</menu>
